# ultrahonk-rust-verifier

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  all_code.txt  code.txt  memo.txt  rust_batchmul_test5.hex  src_to_txt.sh
.github/workflows/: ci.yml  ultrahonk-soroban-verifier-ci.yml
circuits/fib_chain/: Prover.toml
circuits/fib_chain/src/: main.nr
circuits/simple_circuit/: Nargo.toml
preprocess_vk_cli/: Cargo.toml
scripts/: invoke_ultrahonk.py  run_localnet_e2e.sh
scripts/invoke_ultrahonk/: README.md  invoke_ultrahonk.ts  package-lock.json  package.json  run_localnet_e2e.sh  tsconfig.json
scripts/measure_ultrahonk_costs/: README.md  measure_ultrahonk_costs.ts  package-lock.json  package.json  tsconfig.json
simple_circuit/: Nargo.toml
solidity_verifier/simple_circuit/: README.md  foundry.toml
solidity_verifier/simple_circuit/scripts/: run_verifier.sh
solidity_verifier/simple_circuit/src/: Verifier.sol
solidity_verifier/simple_circuit/test/: SimpleCircuitVerifier.t.sol
src/: backend.rs  crypto.rs  debug.rs  ec.rs  field.rs  hash.rs  lib.rs  relations.rs  shplemini.rs  shplonk.rs  sumcheck.rs  transcript.rs  types.rs  utils.rs  verifier.rs  vk.rs
test_snapshots/: verify_fib_chain_proof_succeeds.1.json  verify_poseidon2_demo_proof_succeeds.1.json  verify_simple_circuit_proof_succeeds.1.json
tests/: build_circuits.sh  compare_vk_sources.rs  integration_tests.rs  verifier.rs  verifier_test.rs
tests/fib_chain/: Nargo.toml  Prover.toml
tests/fib_chain/src/: main.nr
tests/fixtures/: simple_vk.json
tests/poseidon2_demo/: Nargo.toml  Prover.toml
tests/poseidon2_demo/src/: main.nr
tests/tornado_classic/circuit/scripts/: gen_artifacts.sh
tests/tornado_classic/circuit/src/: main.nr
tests/tornado_classic/harness/src/: hash2.rs
tests/tornado_classic/harness/tests/: verifier.rs
tornado_classic/: README.md
tornado_classic/circuit/: Nargo.toml  Prover.toml
tornado_classic/circuit/scripts/: gen_artifacts.sh
tornado_classic/circuit/src/: main.nr
tornado_classic/contracts/: Cargo.toml  lib.rs
tornado_classic/contracts/examples/: populate_publics.rs
tornado_classic/contracts/src/: hash2.rs  mixer.rs
tornado_classic/contracts/tests/: mixer.rs  verifier.rs
tornado_classic/harness/: Cargo.toml
tornado_classic/harness/examples/: populate_publics.rs
tornado_classic/harness/src/: hash2.rs  mixer.rs
tornado_classic/harness/tests/: mixer.rs  verifier.rs
ultrahonk-soroban-verifier/: Cargo.toml  README.md
ultrahonk-soroban-verifier/circuits/fib_chain/: Nargo.toml
ultrahonk-soroban-verifier/src/: ec.rs  field.rs  lib.rs  relations.rs  transcript.rs  utils.rs
ultrahonk-soroban-verifier/tests/: build_circuits.sh  verifier_test.rs
