[package]
name = "ultrahonk_soroban_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "e516750bd3e2d7624096b9681ad4174f6a7011a0", default-features = false, features = ["alloc"] }
ultrahonk_rust_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", branch = "refactor/vk", default-features = false, features = ["alloc", "soroban-precompile", "serde_json", "serde"] }

ark-bn254 = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }

[dev-dependencies]
# Enable test helpers for local unit tests
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "e516750bd3e2d7624096b9681ad4174f6a7011a0", features = ["testutils"] }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "cf58d535ab05d02802a5e804a95524650f8c62c7" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
