[package]
name = "tornado_classic_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
ultrahonk_soroban_contract = { path = "../.." }
soroban-sdk = { path = "../../../rs-soroban-sdk/soroban-sdk", default-features = false }
ultrahonk_rust_verifier = { path = "../../../ultrahonk-rust-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { path = "../../../rs-soroban-sdk/soroban-sdk", features = ["testutils"] }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "cf58d535ab05d02802a5e804a95524650f8c62c7" }
num-bigint = "0.4"

[lib]
name = "tornado_classic_contracts"
path = "lib.rs"

[features]
std = []
testutils = []
wasm-cost = ["testutils"]

[[example]]
name = "populate_publics"
path = "examples/populate_publics.rs"
required-features = ["std"]
